# experiments

./: .gitignore  README.md  TODO.txt  commit.template
bash/: called-from-explore-subshells.sh  (+18 more)
python/starlette/01-class-based-routing/: .gitignore  README.md  TODO.txt  commit.template  packages.txt  prefix.txt  pylintrc  pyproject.toml  requirements.txt  runws.sh
python/starlette/01-class-based-routing/config/: log-config.dev.json
python/starlette/01-class-based-routing/prompts/: commit.prompt  session.prompt  todo.prompt  unitests.prompt
python/starlette/01-class-based-routing/src/cbrws/: accept_util.py  api_base_endpoint.py  api_documentation_endpoint.py  api_endpoint.py  api_v1_schema_endpoint.py  application.py  cbrws_base_endpoint.py  cbrws_directory_endpoint.py  cbrws_profiles_endpoint.py  cbrws_v1_profile_endpoint.py  cbrws_v1_schema_endpoint.py  config.py  directory_endpoint.py  documentation_directory_endpoint.py  documentation_endpoint.py  functional_endpoint.py  greeting_documentation_endpoint.py  greeting_endpoint.py  greeting_relation_endpoint.py  greeting_relation_profile_endpoint.py  greeting_schema_endpoint.py  http_endpoint.py  http_endpoint_base.py  logging_config.py  not_found.py  profile_directory_endpoint.py  profile_endpoint.py  profile_endpoint_base.py  profile_schema_endpoint.py  profiles_directory_endpoint.py  profiles_endpoint.py  relations_directory_endpoint.py  relations_endpoint.py  relations_schema_endpoint.py  root_endpoint.py  schema_directory_endpoint.py  schema_endpoint.py  service_endpoint.py  template_endpoint.py  url_util.py
(+786 files in other folders)
