[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbrws"
version = "0.1.0"
description = "A Starlette web service using class based routing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jinja2",
  "starlette",
  "uvicorn",
  "werkzeug",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "mypy",
  "pylint",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cbrws*"]

[tool.setuptools.package-data]
cbrws = [
  "schemas/*.jinja2",
  "schemas/*.json",
]
